[package]
name = "simple_notepad"
version = "3.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = true }
rfd = "0.15"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
